# rusttyping

./: Cargo.toml
res/: style.css  words_filtered.txt
src/: main.rs  styled_text_box.rs  text_generator.rs  typing_statistic.rs
src/attributed_text/: attributed_text.rs  attributed_text_block.rs  attributed_text_layout.rs  attributed_text_renderer.rs  mod.rs
src/styled_text/: styled_text.rs  styled_text_box.rs
